# toolchain-msvc-linux

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  test.cmd  test.sh
cmake/: toolchain-msvc-linux.cmake
cmake/modules/: MSVC_Config.cmake  MSVC_Flags.cmake  MSVC_LTO.cmake  MSVC_Targets.cmake  MSVC_Tools.cmake  MSVC_Utils.cmake  MSVC_VFS.cmake
example/test_dll/: CMakeLists.txt  dllmain.cpp  exports.cpp  exports.def
example/test_driver/: CMakeLists.txt  driver.cpp  file1.c
example/test_exe/: CMakeLists.txt  main.cpp
example/test_exe_lto/: CMakeLists.txt  helper.cpp  main.cpp
example/test_lib/: CMakeLists.txt  mathlib.cpp  mathlib.h  stringlib.cpp  stringlib.h
plugin/: CMakeLists.txt
plugin/rshit/: CMakeLists.txt  dllmain.c  exports.def  rshit.cpp
